--- a/k3s_cluster/roles/k3scluster/tasks/delete-and-create-new-vm.yml
+++ b/k3s_cluster/roles/k3scluster/tasks/delete-and-create-new-vm.yml
@@ -20,6 +20,6 @@
   ansible.builtin.shell: |
     multipass launch \
     --name {{ ansible_host }} \
-    --cloud-init temp/cloud-init.yaml \
+    --cloud-init {{ tempfiles_root }}/temp/cloud-init.yaml \
     {{ vm_creation_parameters }}
 
