--- a/k3s_cluster/roles/k3scluster/molecule/default/converge.yml
+++ b/k3s_cluster/roles/k3scluster/molecule/default/converge.yml
@@ -1,6 +1,8 @@
 ---
 - name: Converge
   hosts: all
+  vars:
+    ansible_connection: local
   tasks:
     - name: "Include k3scluster"
       include_role:
