--- a/k3s_cluster/roles/k3scluster/tasks/create-keys-and-cloudinit.yml
+++ b/k3s_cluster/roles/k3scluster/tasks/create-keys-and-cloudinit.yml
@@ -1,25 +1,13 @@
 ---
 # Creates vmadmin keypair that will be used to log into the Multipass VMs
 # and the cloud-init file use when create the VMs.
-# Deletes any existing keys and cloud-init file.
-- name: Delete any existing public and private keys
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: absent
-  with_items:
-    - multipass-certs/user_key
-    - multipass-certs/user_key.pub
 - name: Create vmadmin key-pair
-  ansible.builtin.shell: ssh-keygen -C vmadmin -N "" -f multipass-certs/user_key
+  ansible.builtin.shell: ssh-keygen -C vmadmin -N "" -f {{ tempfiles_root }}/multipass-certs/user_key
   delegate_to: localhost
-- name: Delete any existing cloud-init file
-  ansible.builtin.file:
-    path: temp/cloud-init.yaml
-    state: absent
 - name: Create cloud-init file inserting the public key
   ansible.builtin.template:
     src: templates/cloud-init-template.j2
-    dest: temp/cloud-init.yaml
+    dest: "{{ tempfiles_root }}/temp/cloud-init.yaml"
   delegate_to: localhost
   vars:
-    public_key: "{{lookup('file', 'multipass-certs/user_key.pub')}}"
+    public_key: "{{lookup('file', '{{ tempfiles_root }}/multipass-certs/user_key.pub')}}"
