--- a/k3s_cluster/roles/k3scluster/tests/k3s-cluster-playbook.yml
+++ b/k3s_cluster/roles/k3scluster/tests/k3s-cluster-playbook.yml
@@ -8,8 +8,8 @@
         name: k3scluster
       vars:
         vm_user: "vmadmin"
-        vm_user_ssh_private_key_file: "multipass-certs/user_key"
+        vm_user_ssh_private_key_file: "{{ tempfiles_root }}/multipass-certs/user_key"
         ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
         ansible_connection: local
-        k3s_master_ip_file: "temp/k3s-master-ip.txt"
-        k3s_master_token_file: "temp/k3s-master-token.txt"
+        k3s_master_ip_file: "{{ tempfiles_root }}/temp/k3s-master-ip.txt"
+        k3s_master_token_file: "{{ tempfiles_root }}/temp/k3s-master-token.txt"
