--- a/k3s-cluster-playbook.yml
+++ b/k3s-cluster-playbook.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Create the K3S cluster
       ansible.builtin.include_role:
-        name: k3scluster
+        name: ivankrizsan.k3s_cluster.k3scluster
       vars:
         vm_user: "vmadmin"
         vm_user_ssh_private_key_file: "{{ tempfiles_root }}/multipass-certs/user_key"
