--- a/k3s_cluster/galaxy.yml
+++ b/k3s_cluster/galaxy.yml
@@ -18,19 +18,13 @@ readme: README.md
 authors:
 - Ivan Krizsan
 
-
-### OPTIONAL but strongly recommended
 # A short summary description of the collection
 description: Creates a K3S cluster running in Multipass virtual machines
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
 license:
-- GPL-2.0-or-later
-
-# The path to the license file for the collection. This path is relative to the root of the collection. This key is
-# mutually exclusive with 'license'
-license_file: ''
+- Apache-2.0
 
 # A list of tags you want to associate with the collection for indexing/searching. A tag name has the same character
 # requirements as 'namespace' and 'name'
@@ -43,16 +37,16 @@ tags: []
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: http://example.com/repository
+repository: https://github.com/krizsan/k3s-cluster-ansible.git
 
 # The URL to any online docs
 documentation: http://docs.example.com
 
 # The URL to the homepage of the collection/project
-homepage: http://example.com
+homepage: https://github.com/krizsan/k3s-cluster-ansible
 
 # The URL to the collection issue tracker
-issues: http://example.com/issue/tracker
+issues: https://github.com/krizsan/k3s-cluster-ansible/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
