--- a/k3s_cluster/roles/k3scluster/tasks/install-k3s-agent.yml
+++ b/k3s_cluster/roles/k3scluster/tasks/install-k3s-agent.yml
@@ -21,11 +21,7 @@
 - name: Install K3S on agent node and log result
   ansible.builtin.include_tasks: execute-cmd-and-log.yml
   vars:
-    vm_command: |
-      curl -sfL https://get.k3s.io \
-      | K3S_URL="https://{{ k3s_master_ip }}:6443" \
-      INSTALL_K3S_CHANNEL=latest \
-      K3S_TOKEN="{{ k3s_master_token }}" sh -
+    vm_command: "{{ k3s_install_agent_cmd }}"
     log_msg_prefix: "K3S agent installation log"
     ansible_user: "{{ vm_user }}"
     ansible_ssh_private_key_file: "{{ vm_user_ssh_private_key_file }}"
