--- a/k3s_cluster/roles/k3scluster/tasks/install-k3s-master.yml
+++ b/k3s_cluster/roles/k3scluster/tasks/install-k3s-master.yml
@@ -25,7 +25,7 @@
 - name: Install K3S on master node
   ansible.builtin.include_tasks: execute-cmd-and-log.yml
   vars:
-    vm_command: "curl -sfL https://get.k3s.io | INSTALL_K3S_CHANNEL=latest sh -"
+    vm_command: "{{ k3s_install_master_cmd }}"
     log_msg_prefix: "K3S master installation log"
     ansible_user: "{{ vm_user }}"
     ansible_ssh_private_key_file: "{{ vm_user_ssh_private_key_file }}"
